wrapping issues

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -85,6 +85,9 @@ footer {
 .credential img {
     float:left;
 }
+.cred-text {
+    overflow:hidden;
+}
 .creditial a:link {
     text-decoration: underline;
 }
